# c6_credit_card

./: .gitignore  README.md  pyproject.toml  run.sh  teste.py
c6_credit_card/: __init__.py  __main__.py  output.py  services.py
c6_credit_card.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
c6_credit_card/data/: __init__.py  file.py  files.py  mapping.json  mapping.py  result.py  rich_pandas.py
tests/: test_main.py  test_output.py  test_services.py
